--- a/package.json
+++ b/package.json
@@ -14,30 +14,22 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.1",
-    "@mui/icons-material": "^5.15.18",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^5.15.18",
-    "@mui/styles": "^5.15.18",
-    "dotenv-webpack": "^8.1.0",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "date-fns": "^2.30.0",
+    "less": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
-    "@babel/cli": "^7.24.5",
-    "@babel/core": "^7.24.5",
-    "@babel/eslint-parser": "^7.24.5",
-    "@babel/plugin-transform-runtime": "^7.24.3",
-    "@babel/preset-env": "^7.24.5",
-    "@babel/preset-react": "^7.24.1",
-    "@babel/runtime": "^7.24.5",
     "@parcel/transformer-less": "^2.12.0",
-    "babel-loader": "^9.1.3",
-    "buffer": "^6.0.3",
     "parcel": "^2.12.0",
-    "process": "^0.11.10",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "process": "^0.11.10"
   }
 }
