--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "date-fns": "^2.30.0",
@@ -28,8 +31,10 @@
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
+    "@parcel/resolver-glob": "^2.12.0",
     "@parcel/transformer-less": "^2.12.0",
     "parcel": "^2.12.0",
+    "parcel-plugin-static-files-copy": "^2.6.0",
     "process": "^0.11.10"
   }
 }
